# palantiri

./: .clippy.toml  .env.example  .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md  comments.txt  deny.toml  rustc-ice-2025-02-07T21_27_23-74648.txt  rustc-ice-2025-02-11T12_59_39-34292.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
benches/: Cargo.toml  alloy_vs_palantiri.rs  diagnostic.rs  http2_optimization_benchmark.rs  network_optimized.rs  rpc.rs  serialization_benchmark.rs  tower_performance.rs
benches/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/gondor/: README.md
crates/mithril/: Cargo.toml
crates/mithril/src/: lib.rs  proof.rs
crates/mordor/: Cargo.toml
crates/mordor/src/: lib.rs
crates/palantiri/: Cargo.toml
crates/palantiri/benches/: rpc.rs
crates/palantiri/src/: README.md  lib.rs  node.rs  rpc.rs
crates/palantiri/src/transport/: http.rs
crates/parser/: Cargo.toml
crates/parser/src/: block_parser.rs  lib.rs  log_parser.rs  parser_for_small_response.rs  tx_parser.rs  types.rs
crates/parser/src/beacon/: beacon_attestation.rs  beacon_finality_checkpoints.rs  beacon_genesis_parser.rs  beacon_state_root_parser.rs  light_client_bootstrap.rs  light_client_update.rs  light_finality_update.rs  light_optimistic_update.rs  mod.rs
crates/shadowfax/: README.md
crates/shadowfax/src/: lib.rs
crates/shire/: Cargo.toml
crates/shire/src/: checkpoint.rs  concensus.rs  concensus_rpc.rs  lib.rs  libp2p.rs  light_client.rs
examples/: direct_test.rs  direct_transport_test.rs  hyper_minimal_test.rs  perf_test.rs  reqwest_optimized_test.rs  transport_comparison.rs
src/: README.md  direct_reqwest_transport.rs  direct_transport.rs  holder  hyper_rpc.rs  hyper_transport.rs  lib.rs  node.rs  parser.rs  reqwest_transport.rs  rpc.rs  tower_transport.rs  types.rs
src/mithril/: proof.rs
src/mordor/: Cargo.toml  README.md
src/mordor/src/: lib.rs
src/palantiri/: libp2p.rs  mod.rs  node.rs  rpc.rs
src/palantiri/transport/: http.rs
src/parser/: block_parser.rs  lib.rs  log_parser.rs  mod.rs  parser_for_small_response.rs  tx_parser.rs  types.rs
src/shadowfax/: Cargo.toml
src/shire/: concensus.rs  mod.rs
src/transport/: http.rs
tests/: parser_tests.rs
