
[package]
name = "palantiri"
version = "0.1.0"
edition = "2021"
authors = ["Malik <Aremumalik05@gmail.com>"]
description = "RPC client"
license = "MIT"
repository = "https://github.com/malik672/palantiri"
readme = "README.md"
keywords = ["Ethereum", "rpc"]

[dependencies]
alloy = "0.13.0"
alloy-trie = "0.7.9"
async-trait = "0.1.88"
criterion = "0.5.1"
dotenv = "0.15.0"   
futures = "0.3.31"
lru = "0.13.0"
memchr = "2.7.4"
reqwest = { version = "0.12.15", features = ["rustls-tls"], default-features = false }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = {version = "1.42.0", features = ["rt-multi-thread", "full"]}


[profile.bench]
debug = true

[[bench]]
 name="rpc"
 harness = false
