
[package]
name = "palantiri"
version = "0.1.0"
edition = "2021"
authors = ["Malik <Aremumalik05@gmail.com>"]
description = "RPC client"
license = "MIT"
repository = "https://github.com/malik672/palantiri"
readme = "README.md"
keywords = ["Ethereum", "rpc"]

[dependencies]
alloy = "0.13.0"
alloy-trie = "0.7.9"
async-trait = "0.1.88"
bytes = "1.10.1"
criterion = "0.5.1"
dotenv = "0.15.0"   
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.2", features = ["client", "full", "http1", "http2"] }
hyper-content-encoding = "0.1.1"
hyper-rustls = "0.27.5"
hyper-tls = "0.6.0"
hyper-util = {version = "0.1.11", features = ["full"]}
lru = "0.13.0"
memchr = "2.7.4"
reqwest = { version = "0.12.15", features = ["rustls-tls"], default-features = false }
rustls = "0.23.26"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = {version = "1.42.0", features = ["rt-multi-thread", "full"]}
tower = { version = "0.5.2", features = ["limit"] }
tracing = "0.1.41"
trust-dns-resolver = "0.23.2"
webpki-roots = "0.26.10"


[profile.bench]
debug = true

[[bench]]
 name="rpc"
 harness = false
