
[package]
name = "palantiri"
version = "0.1.0"
edition = "2021"
authors = ["Malik <Aremumalik05@gmail.com>"]
description = "RPC client"
license = "MIT"
repository = "https://github.com/malik672/palantiri"
readme = "README.md"
keywords = ["Ethereum", "rpc"]

[dependencies]
alloy = "0.13.0"
alloy-trie = "0.7.9"
async-trait = "0.1.88"
bytes = "1.10.1"
criterion = "0.5.1"
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.2", features = ["client", "full", "http1", "http2"] }
hyper-content-encoding = "0.1.1"
hyper-rustls = { version = "0.27.5", features = ["http2"] }
hyper-util = {version = "0.1.11", features = ["full"]}
lru = "0.13.0"
memchr = "2.7.4"
reqwest = { version = "0.12.15", features = ["rustls-tls"], default-features = false }
rustls = "0.23.26"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = {version = "1.42.0", features = ["rt-multi-thread", "full"]}
tower = { version = "0.5.2", features = ["limit", "buffer", "timeout", "retry", "load-shed", "util"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
hickory-resolver = "0.24"
webpki-roots = "0.26.10"


[profile.bench]
debug = true

[[bench]]
 name="rpc"
 harness = false

[[bench]]
 name="diagnostic" 
 harness = false

[[bench]]
 name="network_optimized"
 harness = false

[[bench]]
 name="alloy_vs_palantiri"
 harness = false

[[bench]]
 name="tower_performance"
 harness = false
