[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
palantiri = { path = "../palantiri" }
alloy-primitives.workspace = true
clap.workspace = true
clap_derive.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs = "6.0.0"
comfy-table = "7.1.3"
toml = "0.8.19"
