[package]
name = "shadowfax"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8.18"
core_affinity = "0.8.1"
crossbeam-skiplist = "0.1.3"
dashmap = "6.1.0"
futures = "0.3.31"


libc = { version = "0.2.169", features = ["use_std"] }
memmap2 = "0.9.5"
num_cpus = "1.16.0"
parking_lot = "0.12.3"
rayon = "1.10.0"
tokio = { version = "1.42.0", features = ["sync", "rt"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7.3", features = ["bindgen"] }
